[gd_scene load_steps=16 format=3 uid="uid://c4uwulp8x1lqf"]

[ext_resource type="Script" path="res://scripts/game_over_screen.gd" id="1_ek3xr"]
[ext_resource type="FontFile" uid="uid://r8jj36khxw0w" path="res://assets/font/Jua-Regular.ttf" id="1_wwdpe"]
[ext_resource type="Texture2D" uid="uid://boow4pirct8ew" path="res://button/Button_26.png" id="3_28trv"]
[ext_resource type="Texture2D" uid="uid://dt03jvdlddti0" path="res://button/Button_29.png" id="4_wbfgq"]
[ext_resource type="Texture2D" uid="uid://c2hyq6pjs3d3g" path="res://button/Button_92.png" id="5_ykonx"]
[ext_resource type="Texture2D" uid="uid://b874u3ky3m7qu" path="res://VirusBG.png" id="6_hsc2w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_18qpn"]
bg_color = Color(0, 0.608333, 0.73, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="LabelSettings" id="LabelSettings_tn18w"]
font = ExtResource("1_wwdpe")
font_size = 65

[sub_resource type="LabelSettings" id="LabelSettings_clkbw"]
font = ExtResource("1_wwdpe")
font_size = 36

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h8h42"]
texture = ExtResource("3_28trv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vpv44"]
texture = ExtResource("4_wbfgq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mtxha"]
texture = ExtResource("3_28trv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2octd"]
texture = ExtResource("3_28trv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ng03o"]
texture = ExtResource("4_wbfgq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5iodw"]
texture = ExtResource("3_28trv")

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ek3xr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.490196)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -367.0
offset_top = -221.0
offset_right = 355.0
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_18qpn")

[node name="GameOver" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -153.5
offset_top = 80.0
offset_right = 153.5
offset_bottom = 145.0
grow_horizontal = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_tn18w")

[node name="Score" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.0
offset_top = -61.5
offset_right = 154.0
offset_bottom = 3.5
grow_horizontal = 2
grow_vertical = 2
text = "Score: 9999"
label_settings = SubResource("LabelSettings_clkbw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScore" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.0
offset_top = -5.5
offset_right = 154.0
offset_bottom = 59.5
grow_horizontal = 2
grow_vertical = 2
text = "High Score: 9999"
label_settings = SubResource("LabelSettings_clkbw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = 61.5
offset_right = 79.0
offset_bottom = 242.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_styles/hover = SubResource("StyleBoxTexture_h8h42")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vpv44")
theme_override_styles/normal = SubResource("StyleBoxTexture_mtxha")
icon = ExtResource("5_ykonx")

[node name="BackButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 369.0
offset_top = 276.0
offset_right = 463.0
offset_bottom = 368.0
theme_override_styles/hover = SubResource("StyleBoxTexture_2octd")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ng03o")
theme_override_styles/normal = SubResource("StyleBoxTexture_5iodw")

[node name="VirusBg" type="Sprite2D" parent="."]
position = Vector2(575, 313.5)
scale = Vector2(0.598958, 0.623148)
texture = ExtResource("6_hsc2w")

[connection signal="pressed" from="Panel/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_button_pressed"]
